--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Redux Dispatch Example</title>
-</head>
-<body>
-  
-  <script src="js/reducer.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Redux Dispatch Example</title>
+    <style>body {background-color: grey;}</style>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script src="js/reducer.js"></script>
+  </body>
 </html>
